--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^3.4.17"
   },
   "scripts": {
-  "dev": "npx tailwindcss -i ./src/input.css -o ./src/output.css --watch"
-}
+    "dev": "npx tailwindcss -i ./src/input.css -o ./src/output.css --watch",
+    "predeploy": "npx tailwindcss -i ./src/input.css -o ./src/output.css",
+    "deploy": "gh-pages -d src"
+  },
+  "homepage": "https://your-username.github.io/manage-landing-page"
 }
